--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,13 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+4
   fl_chart: ^0.9.0
-
+  responsive_screen: ^1.0.0
+  line_icons: ^0.2.0
+  google_fonts: 0.2.0
+  flutter_screenutil: ^1.1.0
+  carousel_pro: ^1.0.0
+  url_launcher: ^5.4.10
+  flutter_statusbarcolor: ^0.2.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
